first web file.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     
     <body>
         <h1>Hello Coursera why not updating but why?</h1>
-        <p>This is my first test page it's not working</p>
+        <p>I guess it is</p>
+        <h3>This is ridiculous, I'm being so lazy</h3>
+        <h2>I really need to get cracking!</h2>
+        <p>this is unacceptable</p>
     </body>
 
 </html>
